# woolies-nz-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/woolies_cli/: __init__.py  banner.py  browser.py  cli.py  client.py  config.py  http_client.py  paths.py
