[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "woolies-nz-cli"
version = "0.1.0"
description = "Unofficial CLI for Woolworths New Zealand: search products and manage your cart."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jake McInteer", email = "mcinteerj@gmail.com" },
]
keywords = ["woolworths", "new-zealand", "grocery", "cli", "shopping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "camoufox>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/mcinteerj/woolies-nz-cli"
Issues = "https://github.com/mcinteerj/woolies-nz-cli/issues"
Changelog = "https://github.com/mcinteerj/woolies-nz-cli/blob/main/CHANGELOG.md"

[project.scripts]
woolies = "woolies_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
